--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,30 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">查看教程</string>
+
+    <string-array name="style_names">
+        <item>主题选择</item>
+        <item>default</item>
+        <item>default light</item>
+        <item>default light dark</item>
+        <item>red</item>
+        <item>pink</item>
+        <item>purple</item>
+        <item>deep purple</item>
+        <item>indigo</item>
+        <item>blue</item>
+        <item>light blue</item>
+        <item>cyan</item>
+        <item>teal</item>
+        <item>green</item>
+        <item>light green</item>
+        <item>lime</item>
+        <item>yellow</item>
+        <item>amber</item>
+        <item>orange</item>
+        <item>deep orange</item>
+        <item>brown</item>
+        <item>grey</item>
+        <item>blue grey</item>
+    </string-array>
 </resources>
